# HireSense

./: README.md  ava.py  database.db  database.py  main.py  models.py  pyproject.toml
core/: config.py  oauth2.py
frontend/vite-project/: README.md  package-lock.json  package.json
frontend/vite-project/src/: App.jsx
frontend/vite-project/src/components/: Layout.jsx  ProtectedRoute.jsx
frontend/vite-project/src/contexts/: AuthContext.jsx
frontend/vite-project/src/pages/: AdminDashboard.jsx  Dashboard.jsx  Login.jsx  MatchHistory.jsx  MatchJob.jsx  MyResumes.jsx  Register.jsx  UploadResume.jsx
frontend/vite-project/src/services/: adminService.js  authService.js  jobService.js  resumeService.js  websocketService.js
frontend/vite-project/src/utils/: api.js
routers/: admin.py  auth.py  jobs.py  jobs2.py  resume.py  resume2.py  user.py  websocket.py
schemas/: agent_schemas.py  job_schemas.py  resume_schema.py  user_schema.py
services/: agent_service.py  agent_service2.py  pdf_service.py  websocket_manager.py
